--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <body>
 
 
-    <h1 id="myId"></h1>
-    <h2 id="ivan"></h2>
     <script src="main.js"></script>
+    <script src="n1909.js"></script>
 </body>
 </html>
